modify index.html lần 3 và thêm 1 file new.html mới

--- a/new.html
+++ b/new.html
@@ -6,8 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello Vietnam</h1>
-    <h2>Địt mẹ cali</h2>
-    <h3>Vietnam vô địch</h3>
+    <h1>News</h1>
   </body>
 </html>
